--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,13 @@
     height: 400px; 
     width: 100%;  
    }
-   html, body {
+html, body {
     height: 100%;
     margin: 0;
     padding: 0;
   }
+
+#title {
+    text-align: center;
+    background-color: peachpuff;
+}
