--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 #map {
     display: inline-block;
-    height: 400px; 
-    width: 70%;  
+    height: 500px; 
+    width: 70%; 
+    border: 3px; 
    }
 html, body {
-    height: 100%;
+    height: 10%;
     margin: 0;
-    padding: 0;
+    padding: 5px;
   }
 
 #title {
