--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     border: 3px; 
    }
 html, body {
-    height: 10%;
+    /* height: 10%; */
     margin: 0;
     padding: 5px;
   }
@@ -16,6 +16,7 @@ html, body {
 }
 
 #addressButton {
-    display: inline-block;
+    float: right;
+    /* display: inline-block; */
     width: 28%;
 }
