Items form now working.  Trying to get CSS correct

--- a/styles.css
+++ b/styles.css
@@ -43,9 +43,15 @@ div#addressButton {
 
 #item-form {
     border: 3px solid #73AD21;
-    /* display: none; */
     padding: 4px;
     width: 26%;
     position: absolute;
     top: 33%;
     right: 20px;
+    height: 50%
+}
+
+#add-items-button {
+    float: right;
+    width: 28%; 
+}
