Changed styling so that addresses can be added with forms appearing and hidden as needed

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ div#addressButton {
     background-color: antiquewhite;
 }
 
-#item-form {
+#items-form {
     border: 3px solid #73AD21;
     padding: 4px;
     width: 26%;
